--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -7,7 +7,9 @@
 
 @using eShop.CoreBusiness.Models
 
+@using eShop.UseCases.ViewProductScreen.Interfaces
 @using eShop.UseCases.ViewProductScreen
+@using eShop.UseCases.SearchProductScreen.Interfaces
 @using eShop.UseCases.SearchProductScreen
 
 
