Improved UI + added another ShoppingCart logic

--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/SearchProduct.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/SearchProduct.razor
@@ -1,47 +1,28 @@
-﻿@page "/products"
+﻿@page "/"
+@page "/products"
 
 @inject ISearchProductUseCase searchProduct
 
-<h3>Search Products</h3>
+<h3 class="">Search Products</h3>
 <br />
 
 <SearchBarComponent OnSearch="HandleSearch"></SearchBarComponent>
 
 <br />
 
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Name
-            </th>
-            <th>
-                Brand
-            </th>
-            <th>
-                Price
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (products != null && products.Count() !=0)
+@if (products != null && products.Count() > 0)
+{
+    <div class="row">
+        @foreach (var product in products)
         {
-            @foreach (var product in products)
-            {
-                <ProductItemComponent Product="product"></ProductItemComponent>
-            }
+            <ProductCardComponent Product="product"></ProductCardComponent>
         }
-        else
-        {
-            <tr>
-                <td colspan="3">
-                    Cannot find products
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+    </div>
+}
+else
+{
+    <div class="text-danger"> No products Found.</div>
+}
 
 
 @code {
@@ -61,3 +42,4 @@
         products = searchProduct.Execute(filter);
     }
 }
+
