--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -11,5 +11,8 @@
 @using eShop.UseCases.ViewProductScreen
 @using eShop.UseCases.SearchProductScreen.Interfaces
 @using eShop.UseCases.SearchProductScreen
+@using eShop.UseCases.ShoppingCartScreen.Interfaces
+@using eShop.UseCases.ShoppingCartScreen
+
 
 
