Updated the shopping cart functionality

--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -13,6 +13,7 @@
 @using eShop.UseCases.SearchProductScreen
 @using eShop.UseCases.ShoppingCartScreen.Interfaces
 @using eShop.UseCases.ShoppingCartScreen
+@using eShop.UseCases.PluginInterfaces.StateStore
 
 
 
