--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/LineItemComponent.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/LineItemComponent.razor
@@ -1,5 +1,7 @@
-﻿
-@if(LineItem != null && LineItem.Product != null)
+﻿@inject IDeleteProductUseCase deleteProductUseCase
+@inject IUpdateQuantityUseCase updateQuantityUseCase
+
+@if (LineItem != null && LineItem.Product != null)
 {
     <li class="row">
         <div class="col">
@@ -16,7 +18,7 @@
             </div>
         </div>
         <div class="col">
-            <button class="btn btn-light" @onclick="@(() => DeleteProduct(LineItem.ProductId))"></button>
+            <button class="btn btn-light" @onclick="@(() => DeleteProduct(LineItem.ProductId))">Delete</button>
         </div>
     </li>
 }
@@ -26,13 +28,33 @@
     [Parameter]
     public OrderLineItem LineItem { get; set; }
 
-    private void HandleQuantityChange()
-    {
+    [Parameter]
+    public EventCallback<Order> OnDeleteProduct { get; set; }
 
+    [Parameter]
+    public EventCallback<Order> OnUpdateQuantity { get; set; }
+
+    private async void HandleQuantityChange(ChangeEventArgs e)
+    {
+        if (e.Value == null || string.IsNullOrWhiteSpace(e.Value.ToString()))
+            return;
+
+        int qty = 0;
+        if(int.TryParse(e.Value.ToString(), out qty))
+        {
+            if(qty < 0)
+            {
+                return;
+            }
+
+            var order = await updateQuantityUseCase.Execute(LineItem.ProductId, qty);
+            await OnUpdateQuantity.InvokeAsync(order);
+        }
     }
 
-    private void DeleteProduct(int productId)
+    private async void DeleteProduct(int productId)
     {
-
+        var order = await deleteProductUseCase.Execute(productId);
+        await OnDeleteProduct.InvokeAsync(order);
     }
 }
