--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ShoppingCart.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ShoppingCart.razor
@@ -11,7 +11,9 @@
             <ul>
                 @for (int i = 0; i < order.LineItems.Count(); i++)
                 {
-                    <LineItemComponent LineItem="order.LineItems[i]"></LineItemComponent>
+                    <LineItemComponent LineItem="order.LineItems[i]"
+                                       OnDeleteProduct ="HandleDeleteProduct"
+                                       OnUpdateQuantity="HandleUpdateQuantity"></LineItemComponent>
                     @if (i < order.LineItems.Count - 1)
                     {
                         <li style="list-style:none">
@@ -43,4 +45,13 @@ else
         }
     }
 
+    private void HandleDeleteProduct(Order order)
+    {
+        this.order= order;
+    }
+
+    private void HandleUpdateQuantity(Order order)
+    {
+        this.order = order;
+    }
 }
