--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -1,7 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Forms
 
-@using eShop.Web.CustomerPortal.Controls
+@using eShop.Web.CustomerPortal.Controls 
+@using eShop.Web.CustomerPortal.ViewModels 
 
 @using eShop.Web.Common.Controls
 
@@ -14,6 +16,7 @@
 @using eShop.UseCases.ShoppingCartScreen.Interfaces
 @using eShop.UseCases.ShoppingCartScreen
 @using eShop.UseCases.PluginInterfaces.StateStore
+@using eShop.UseCases.OrderConfirmationScreen
 
 
 
