--- a/eShop.Web/Shared/TopNavBar.razor
+++ b/eShop.Web/Shared/TopNavBar.razor
@@ -3,9 +3,15 @@
         <li class="nav-item">
             <a class="navbar-brand" href="">eShop</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="outstandingorders">Outstanding Orders</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="processedorders">Processed Orders</a>
+        </li>
         <li class="nav-item ml-auto">
             <NavLink class="nav-link" href="cart">
-                <eShop.Web.CustomerPortal.Controls.CartComponent></eShop.Web.CustomerPortal.Controls.CartComponent>    
+                <eShop.Web.CustomerPortal.Controls.CartComponent></eShop.Web.CustomerPortal.Controls.CartComponent>
             </NavLink>
         </li>
     </ul>
