Added basic cookie authentication

--- a/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OrderDetail.razor
+++ b/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OrderDetail.razor
@@ -1,5 +1,7 @@
 ﻿@page "/orderdetail/{id:int}"
 
+@attribute [Authorize]
+
 @inject NavigationManager navigationManager
 
 @inject IViewOrderDetailUseCase viewOrderDetailUseCase
@@ -51,6 +53,16 @@
 
     private Order order;
 
+    private AuthenticationState authState;
+
+    [CascadingParameter]
+    private Task<AuthenticationState> authStateTask { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        authState = await authStateTask;
+    }
+
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
@@ -63,9 +75,9 @@
 
     private void HandleProcessOrder()
     {
-        if(order != null)
+        if (order != null && authState != null)
         {
-            processOrderUseCase.Execute(order.OrderId.Value, "admin");
+            processOrderUseCase.Execute(order.OrderId.Value, authState.User.Identity.Name);
             navigationManager.NavigateTo("/outstandingorders");
         }
     }
