--- a/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/ProcessedOrders.razor
+++ b/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/ProcessedOrders.razor
@@ -1,5 +1,7 @@
 ﻿@page "/processedorders"
 
+@attribute [Authorize]
+
 @inject IViewProcessedOrderUseCase viewProcessedOrderUseCase
 
 <h3>Processed Orders</h3>
